<resources>
    <string name="app_name">Money Manager</string>
    <string name="key">key</string>

    <!--Add Items Module-->
    <string name="add_income">Add income category</string>
    <string name="add_expense">Add expense category</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category Name</string>
    <string name="category_settings">Category Settings</string>
    <string name="add_new_category">+ Add new category</string>
    <string name="expenses_list">Expenses list</string>
    <string name="income_list">Incomes list</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="money">Money</string>
    <string name="date">Date</string>
    <string name="memo">Memo</string>
    <string name="login_with_google">Login with Google</string>
    <string name="money_manager">Money Manager</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="expenses">Expenses</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="last_time">Last time</string>
    <string name="export_form">Export form</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="format">Format</string>
    <string name="enter_your_category">Enter your category</string>
    <string name="chart">Chart</string>
    <string name="export">Export</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="today">Today</string>
    <string name="note">Note</string>
    <string name="version">Version</string>
    <string name="version_code">Version code</string>

    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="july">July</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="alert_empty">No Transactions or Check your connection</string>

    <string name="delete_title">Delete</string>
    <string name="delete_mes">Are you sure to delete item?</string>

    <string name="logout_mes">Are you sure to logout?</string>
    <string name="logout_title">Logout</string>
    <string name="reload_success">Reload success!!</string>
    <string name="category_exist">Category existed!!</string>
    <string name="add_success">Add success!!</string>
    <string name="please_enter">Please enter name!</string>
    <string name="error_format">Error format!!</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="language">Language</string>
    <string name="vietnam">Vietnamese</string>
    <string name="english">English</string>
    <string name="smart_reminder">Smart reminder</string>
    <string name="fire_notification">Fire notification at</string>
    <string name="no_reminder">No reminder</string>
    <string name="language_title">Change language</string>
    <string name="language_mes">Do you want to change your language?</string>
    <string name="rate_mes">You support will help us improve the app</string>
    <string name="language_selected">Language was selected!!</string>
    <string name="create_reminder">Create reminder</string>
    <string name="select_category_error">Please select type category!</string>
    <string name="infor_error">Please enter information!!</string>
    <string name="thanks_feedback">Thanks for your feedback!!</string>


    <!--Chart Module-->
    <!--Login Module-->
    <!--Profile Module-->
    <!--Setting Module-->
    <!--Main Module-->

</resources>
