<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/chart"
        android:icon="@mipmap/chart"
        android:title="@string/chart"/>
    <item android:id="@+id/categories"
        android:icon="@mipmap/category"
        android:title="@string/categories"/>
    <item android:id="@+id/export"
        android:icon="@mipmap/export"
        android:title="@string/export"/>
    <item android:id="@+id/setting"
        android:icon="@mipmap/setting"
        android:title="@string/setting"/>
    <item android:id="@+id/rateus"
        android:icon="@mipmap/rate"
        android:title="@string/rate_us"/>
    <item android:id="@+id/about"
        android:icon="@mipmap/about"
        android:title="@string/about"/>
</menu>