<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9feff"
    tools:context=".main.setting.SettingActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ripple">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/back"/>
        </RelativeLayout>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#ccc"/>
    </RelativeLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/btnSmart"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingVertical="30dp"
            android:paddingHorizontal="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_setting">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smart_reminder"
                android:textSize="16dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvRemind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_notification"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/btnLang"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            android:paddingVertical="30dp"
            android:paddingHorizontal="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_setting">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/language"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vietnam"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>