<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_form"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="12dp"/>
        <TextView
            android:id="@+id/tvStart"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2019-11-30"
            android:textColor="#000"
            android:textSize="16dp"
            android:backgroundTint="#FFEB3B"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeb3b"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="12dp"/>
        <TextView
            android:id="@+id/tvEnd"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2019-11-30"
            android:textColor="#000"
            android:textSize="16dp"
            android:backgroundTint="#FFEB3B"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeb3b"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format"
            android:textSize="12dp"/>

        <Spinner
            android:id="@+id/spinnerFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="left"
            android:backgroundTint="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffeb3b"/>
    </LinearLayout>
</LinearLayout>