<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9feff"
    tools:context=".main.MainActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header-->
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff">
            <RelativeLayout
                android:id="@+id/btnMenu"
                android:padding="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ripple">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/menu"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/btnMonthPicker"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/btnMenu"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvMonthPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#000"/>
                <ImageView
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/btnMonthPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/down"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnReload"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ripple">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/reload"/>
            </RelativeLayout>
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="#ccc"/>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_below="@id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Income and Expense-->
                <LinearLayout
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/corner_layout">
                    <LinearLayout
                        android:id="@+id/btnIncome"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/income"
                            android:textSize="12dp"
                            android:textColor="#000"/>
                        <TextView
                            android:id="@+id/sumIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="18dp"
                            android:textColor="#000"/>
                    </LinearLayout>
                    <View
                        android:layout_marginVertical="10dp"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000"/>
                    <LinearLayout
                        android:id="@+id/btnExpense"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expenses"
                            android:textSize="12dp"
                            android:textColor="#000"/>
                        <TextView
                            android:id="@+id/sumExpense"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="18dp"
                            android:textColor="#000"/>
                    </LinearLayout>
                    <View
                        android:layout_marginVertical="10dp"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balance"
                            android:textSize="12dp"
                            android:textColor="#000"/>
                        <TextView
                            android:id="@+id/balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="18dp"
                             android:textColor="#000"/>
                    </LinearLayout>

                </LinearLayout>
                <!--History-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleView"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/monthPicker"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">
                <ImageButton
                    android:id="@+id/btnBefore"
                    android:padding="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/ripple"
                    android:src="@mipmap/left"/>
                <TextView
                    android:id="@+id/tvYear"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="2019"
                    android:textAlignment="center"
                    android:textColor="#000"/>
                <ImageButton
                    android:id="@+id/btnAfter"
                    android:padding="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/ripple"
                    android:src="@mipmap/right"/>
            </LinearLayout>
            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:id="@+id/month1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/jan"

                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/feb"

                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/mar"

                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month4"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/apr"

                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/may"

                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/jun"

                    android:textColor="#000"/>

            </LinearLayout>
            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6">
                <TextView
                    android:id="@+id/month7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/july"

                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/aug"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/sep"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/oct"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/nov"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/month12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:text="@string/dec"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="#000"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/emptyLinear"
            android:visibility="invisible"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/search"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/alert_empty"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/add"
            app:backgroundTint="#FFEB3B" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header_layout"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="#000"
        app:menu="@menu/drawer_menu">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>