<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9feff">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ripple">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/back"/>
        </RelativeLayout>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#ccc"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btnEn"
        android:layout_marginTop="2dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_setting">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="16dp"
            android:text="@string/english"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/checkEn"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/check"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnVi"
        android:paddingVertical="20dp"
        android:paddingHorizontal="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_setting">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/vietnam"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/checkVi"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/check" />
    </RelativeLayout>
</LinearLayout>